# SynapseWorth-

./: .gitignore  README.md  render.yaml
backend/: README.md  main.py  models.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
backend/api/: realtime_flights.py
backend/data/: sample_modes.ndjson
backend/hedera-logger/: README.md  __init__.py  client.py  models.py
backend/mlat-core/: README.md
backend/mlat_core/: __init__.py  calculator.py  models.py
backend/neuron-client/: README.md  models.py
backend/neuron_client/: __init__.py  client.py
backend/routers/: agent.py  auth.py  evaluation.py  hedera.py  mlat.py
backend/scripts/: apply_schema.py  hedera_setup.js  replay_modes.py  seed_sensors.py  test_hedera.py  test_neuron_buyer.py
backend/services/: evaluation_store.py  flight_tracking.py  groq_service.py  hedera_service.py  mlat_pipeline.py  mlat_solver.py  neuron_buyer.py  supabase_service.py
backend/supabase/: config.toml  schema.sql
backend/supabase/functions/mlat-ingest/: index.ts
backend/supabase/functions/mlat-process/: index.ts
backend/tests/: test_agent.py  test_evaluation.py  test_groq_service.py  test_hedera.py  test_hedera_service.py  test_main.py  test_mlat_solver.py
database/: schema.sql  seed.sql
frontend/: README.md  empty-module.js  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/marketplace/: page.tsx
frontend/app/dashboard/publish/: page.tsx
frontend/app/dashboard/reputation/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/mlat/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: aircraft-map.tsx  mlat-nav.tsx
frontend/components/brand/: logo.tsx
frontend/components/dashboard/: app-sidebar.tsx
frontend/components/hedera/: ClientOnlyWrapper.tsx  HederaWalletConnector.tsx  WalletConnectButton.tsx
frontend/components/landing/: footer.tsx  hero-section.tsx  how-it-works-section.tsx  why-hedera-section.tsx
frontend/components/map/: GhostFlight.tsx
frontend/components/marketplace/: HederaWalletConnector.tsx  SensorMarketMap.tsx  WalletConnectButton.tsx
frontend/lib/: ai_service.ts  flight_tracking.ts  supabase.ts
frontend/lib/wallets/: Web3ModalProvider.tsx  useWalletInterface.ts
sdk/: README.md
(+3 files in other folders)
